tests/snapshots/one_line_preset_minimal.snap
---
source: tests/render_one_line.rs
expression: "rendered(\"@minimal\", UnitSystem :: Metric)"
---
\o_+22°C
