tests/snapshots/one_line_preset_short.snap
---
source: tests/render_one_line.rs
expression: "rendered(\"@short\", UnitSystem :: Metric)"
---
\o_ +22°C
